--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-container {
-	font-family: 'Arial', sans-serif;
+	font-family: "Arial", sans-serif;
 	display: flex;
-	flex-direction:column;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
@@ -11,18 +11,26 @@
 
 /* Styles for buttons */
 button {
-  background-color: #007bff; /* Blue */
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.2s ease; /* Smooth transition on hover */
+	background-color: #007bff;
+	/* Blue */
+	color: white;
+	border: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	margin: 5px;
+	cursor: pointer;
+	font-size: 16px;
+	transition: background-color 0.2s ease;
+	/* Smooth transition on hover */
 }
 
 button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+	background-color: #0056b3;
+	/* Darker blue on hover */
 }
 
+.habits-list-container {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
