--- a/src/components/HabitTracker/HabitTracker.css
+++ b/src/components/HabitTracker/HabitTracker.css
@@ -50,5 +50,22 @@
 .action-buttons {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	/* justify-content: center; */
+}
+
+.action-buttons button {
+	background-color: #007bff;
+	/* Blue */
+	color: white;
+	border: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	margin: 5px;
+	cursor: pointer;
+	font-size: 16px;
+	transition: background-color 0.2s ease;
+}
+
+.action-buttons button:hover {
+	background-color: #0056b3;
 }
