--- a/src/components/HabitTracker/HabitTracker.css
+++ b/src/components/HabitTracker/HabitTracker.css
@@ -11,15 +11,34 @@
 	align-items: center;
 }
 
+.remove-habit-button {
+	/* position: relative; */
+	/* top: 10px; */
+	/* right: 10px; */
+	background: none;
+	border: none;
+	cursor: pointer;
+	color: #999;
+	padding: 5px;
+	font-size: 1.5em;
+	transition: color 0.2s ease;
+}
+
+.remove-habit-button:hover {
+	color: #dc3545;
+}
+
 .habit-info {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: flex-end;
 	/* Pushes habit name and indicator to ends */
 	width: 100%;
 }
 
 .habit-info h2 {
+	flex-grow: 1;
+	text-align: center;
 	margin: 0;
 	/* Remove default h2 margin */
 	color: #333;
@@ -29,6 +48,7 @@
 .status-indicator {
 	width: 30px;
 	height: 30px;
+	margin: 5px;
 	border-radius: 50%;
 	/* Makes it a circle */
 	border: 2px solid #ccc;
