--- a/src/components/HabitAdder/HabitAdder.css
+++ b/src/components/HabitAdder/HabitAdder.css
@@ -1,3 +1,17 @@
+.modal-backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+}
+
 .modal-content {
 	background-color: white;
 	padding: 30px;
@@ -24,4 +38,26 @@
 		opacity: 1;
 		transform: scale(1);
 	}
+}
+
+.add-habit-form {
+	display: flex;
+	flex-direction: column;
+}
+
+#habit-input {
+	margin-bottom: 10px;
+	padding: 10px 15px;
+	font-size: 1.2em;
+}
+
+.modal-actions {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
+.add-button,
+.cancel-button {
+	margin: 5px;
 }
