--- a/src/pages/DailyHabitsPage/DailyHabitsPage.css
+++ b/src/pages/DailyHabitsPage/DailyHabitsPage.css
@@ -1,4 +1,6 @@
-
+.app-container h1 {
+	margin-bottom: 20px;
+}
 .date-navigation {
 	display: flex;
 	align-items: center;
@@ -70,4 +72,3 @@
 	background-color: #1e7733;
 	transform: translateY(-2px);
 }
-
