--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .global-nav {
 	width: 100%;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
 	gap: 30px;
 	padding: 15px 0;
 	margin-bottom: 25px;
@@ -16,6 +16,7 @@
 	font-size: 1.1em;
 	padding: 5px 10px;
 	border-radius: 5px;
+	margin-right: 15px;
 	transition:
 		background-color 0.2s ease,
 		color 0.2s ease;
